--- a/Pagina Curso/css/style_index.css
+++ b/Pagina Curso/css/style_index.css
@@ -24,18 +24,47 @@ a{
 
 }
 
+
+
+.logo span{
+    margin-left:2%;
+    color: white;
+    text-align:center;
+    position:absolute;
+    top:4%;
+    transition:0.4s;
+    opacity:0;
+    z-index:2;
+}
+
+
 .logo img{
     width:70px;
     margin-right:15px;
     transition:0.4s;
+    opacity:1;
+    z-index:3
 
 }
 
+.logo {
+    height:10%;
+    transition:0.2s;
 
-.logo img:hover{
+}
+
+.logo:hover span{
+    padding-left:5%;
+    cursor:pointer;
+    opacity:1;
+}
+
+.logo:hover img{
     padding-left:10px;
     cursor:pointer;
+
 }
+
 .nav_ul{
     list-style-type: none;
     margin:0;
@@ -76,6 +105,33 @@ a{
 
 .container_main{
     padding-top:5%;
+}
+
+
+.slider{
+    margin-left: 33%;
+    overflow:hidden;
+    width:35%;
+    height:40%;
+
+}
+
+.slider--inner{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width:100%;
+    transition:0.4s;
+
+}
+
+.slider--inner .img-slider{
+    aspect-ratio:16/9;
+    object-fit: cover;
+    width:100%;
+
+
+
 }
 
 .container_main_titulo{
