--- a/css/style_index.css
+++ b/css/style_index.css
@@ -11,12 +11,14 @@ ul{
 a{
     text-decoration: none;
     list-style: none;
+    color:white;
 }
 
 
 
 .nav{
     display:flex;
+    flex-wrap:nowrap;
     align-items:center;
     justify-content: space-between;
     background-color: rgb(66, 64, 64);
@@ -24,14 +26,38 @@ a{
 
 }
 
+@media (max-width:767px){
+    .logo span{
+        display:none;
+    }
+}
 
+
+
+.logo {
+
+    display:flex;
+    flex-direction:row;
+    flex-wrap:nowrap;
+    align-items: center;
+    align-content:centeR;
+    justify-content:start;
+    gap:2px;
+    height:10%;
+    transition:0.2s;
+
+}
+
+.logo:hover{
+    padding-left:1%;
+}
 
 .logo span{
-    margin-left:2%;
+    margin-left:-15px;
+    display:show;
     color: white;
     text-align:center;
     position:absolute;
-    top:4%;
     transition:0.4s;
     opacity:0;
     z-index:2;
@@ -40,27 +66,19 @@ a{
 
 .logo img{
     width:70px;
-    margin-right:15px;
     transition:0.4s;
     opacity:1;
     z-index:3
 
 }
 
-.logo {
-    height:10%;
-    transition:0.2s;
-
-}
-
 .logo:hover span{
-    padding-left:5%;
+    margin-left:10px;
     cursor:pointer;
     opacity:1;
 }
 
-.logo:hover img{
-    padding-left:10px;
+.logo:hover img,.logo:hover span{
     cursor:pointer;
 
 }
@@ -107,12 +125,14 @@ a{
     padding-top:5%;
 }
 
+/* Slider */
 
 .slider{
-    margin-left: 33%;
-    overflow:hidden;
-    width:35%;
-    height:40%;
+
+    width:100%;
+    height:300px;
+    background:rgb(255, 255, 255);
+    margin-bottom:100px;
 
 }
 
@@ -121,18 +141,33 @@ a{
     flex-direction: row;
     flex-wrap: nowrap;
     width:100%;
+    height: 100%;
     transition:0.4s;
+    gap:3px;
 
 }
 
 .slider--inner .img-slider{
     aspect-ratio:16/9;
-    object-fit: cover;
-    width:100%;
+    object-fit:contain;
+    max-width:100%;
+    height:100%;
+    transition: 0.2s ease-in;
+}
 
 
+
+
+.slider--inner .img-slider:hover{
+    cursor: pointer;
+    scale:1.1;
+    box-shadow: 2px 8px 4px rgba(0, 0, 0, 0.892);
+    margin-left:25px;
+    margin-right:25px;
 
 }
+
+/* Main */
 
 .container_main_titulo{
     width:80%;
