--- a/css/style_juego.css
+++ b/css/style_juego.css
@@ -11,12 +11,14 @@ ul{
 a{
     text-decoration: none;
     list-style: none;
+    color:white;
 }
 
 
 
 .nav{
     display:flex;
+    flex-wrap:nowrap;
     align-items:center;
     justify-content: space-between;
     background-color: rgb(66, 64, 64);
@@ -24,17 +26,61 @@ a{
 
 }
 
-.logo img{
-    width:70px;
-    margin-right:15px;
-    transition:0.4s;
-
+@media (max-width:767px){
+    .logo span{
+        display:none;
+    }
 }
 
 
-.logo img:hover{
-    padding-left:10px;
+
+.logo {
+
+    display:flex;
+    flex-direction:row;
+    flex-wrap:nowrap;
+    align-items: center;
+    align-content:centeR;
+    justify-content:start;
+    gap:2px;
+    height:10%;
+    transition:0.2s;
+
+}
+
+.logo:hover{
+    padding-left:1%;
+}
+
+.logo span{
+    margin-left:-15px;
+    display:show;
+    color: white;
+    text-align:center;
+    position:absolute;
+    transition:0.4s;
+    opacity:0;
+    z-index:2;
+}
+
+
+.logo img{
+    width:70px;
+    transition:0.4s;
+    opacity:1;
+    z-index:3
+
+}
+
+.logo:hover span{
+    margin-left:10px;
     cursor:pointer;
+    opacity:1;
+}
+
+.logo:hover img,.logo:hover span{
+    cursor:pointer;
+
 }
 .nav_ul{
     list-style-type: none;
