--- a/css/style_login.css
+++ b/css/style_login.css
@@ -151,7 +151,7 @@
 
     .opciones_login{
         height:70%;
-        width:80%;
+        width:70%;
         display:flex;
         flex-direction:row;
         justify-content: center;
@@ -175,7 +175,7 @@
         z-index:1;
         align-items:center;
         box-shadow: 0px 0 15px 0px purple;
-        overflow:hidden;
+        overflow:scroll;
 
     }
 
@@ -195,7 +195,7 @@
         justify-content: flex-start;
         padding:10px;
         color:rgba(240, 248, 255, 0.725);
-        font-size: 20px;
+        font-size: 15px;
         border-bottom: solid rgba(255, 255, 255, 0.538);
         width:80%;
     }
